# nano-NN

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h  neuron.h  test.csv
src/: core.h  dataset.c  dataset.h  main.c  main.h  neuralnetwork.c  parser.c  parser.h
